netty自定义通讯协议优化

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 serializer.algorithm=Json
-io.github.yuwenlongpanda.serve.service.HelloService=io.github.yuwenlongpanda.serve.service.HelloServiceImpl
+io.github.yuwenlongpanda.server.service.HelloService=io.github.yuwenlongpanda.server.service.HelloServiceImpl
